utils/pkg-deps/nexus/postgres/peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: db-istio-exceptions
  namespace: nexus-db
spec:
  mtls:
    mode: PERMISSIVE
