utils/pkg-deps/nexus/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-postgres
  namespace: nexus
spec:
  type: ExternalName
  externalName: postgresql.nexus-db.svc.cluster.local
