utils/pkg-deps/nexus/postgres/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nexus-to-nexus-db-egress
  namespace: nexus
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nexus-db
    ports:
    - protocol: TCP
      port: 5432
